--- a/index.html
+++ b/index.html
@@ -1,155 +1,284 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Агентство недвижимости «Мой Мир»</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" defer></script>
-  <script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Центр недвижимости "Мой мир"</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="site-header">
-  <div class="container header-container">
-    <a href="#" class="logo">
-      <img src="https://via.placeholder.com/32" alt="Мой Мир" class="logo-img">
-      <span class="logo-icon">🏠</span>
-    </a>
-    <nav class="nav desktop-nav">
-      <ul>
-        <li><a href="#about">О компании</a></li>
-        <li><a href="#services">Услуги</a></li>
-        <li><a href="#team">Команда</a></li>
-        <li><a href="#reviews">Отзывы</a></li>
-        <li><a href="#contact-map">Контакты</a></li>
-      </ul>
-    </nav>
-    <button class="menu-btn mobile-only" aria-label="Открыть меню">☰</button>
-  </div>
+<header class="header">
+    <div class="header-inner">
+        <a href="#" class="logo">
+            <img src="images/icon.png" alt="Логотип Мой мир">
+        </a>
+        <button class="menu-btn" aria-label="Открыть меню">
+            <span class="menu-btn-icon"></span>
+        </button>
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="#about">О нас</a></li>
+                <li><a href="#advantages">Преимущества</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#invest">Инвестиции</a></li>
+                <li><a href="#team">Команда</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
-<!-- SIDE MENU -->
-<nav class="side-menu" id="sideMenu">
-  <button class="close-btn" aria-label="Закрыть меню">✕</button>
-  <ul>
-    <li><a href="#about">О компании</a></li>
-    <li><a href="#services">Услуги</a></li>
-    <li><a href="#objects">Объекты</a></li>
-    <li><a href="#team">Команда</a></li>
-    <li><a href="#reviews">Отзывы</a></li>
-    <li><a href="#blog">Блог</a></li>
-    <li><a href="#contact-map">Контакты</a></li>
-  </ul>
-</nav>
-
 <main>
-  <!-- HERO -->
-  <section class="hero" id="about">
-    <div class="hero-overlay"></div>
-    <div class="hero-content container animate">
-      <h1>Агентство недвижимости «Мой Мир»</h1>
-      <p>Мы открываем двери в новый дом</p>
-      <a href="#services" class="btn primary">Наши услуги</a>
-      <a href="#contact-map" class="btn ghost">Связаться</a>
-    </div>
-  </section>
+    <section class="hero-section fade-in">
+        <div class="hero-content">
+            <h1>Центр недвижимости "Мой мир"</h1>
+            <p>Продажа, аренда и юридическое сопровождение сделок с недвижимостью</p>
+            <button class="contact-btn-hero">Связаться</button>
+        </div>
+    </section>
 
-  <!-- УСЛУГИ -->
-  <section class="section" id="services">
-    <div class="container">
-      <h2 class="animate">Услуги</h2>
-      <ul class="grid-3">
-        <li class="animate"><h3>Продажа</h3><p>Продадим вашу недвижимость выгодно и быстро.</p></li>
-        <li class="animate"><h3>Покупка</h3><p>Подбор жилья под ваши запросы, полное сопровождение сделки.</p></li>
-        <li class="animate"><h3>Аренда</h3><p>Поможем найти подходящий вариант для аренды жилья или офиса.</p></li>
-        <li class="animate"><h3>Юридическая помощь</h3><p>Проверка документов и консультации юристов.</p></li>
-        <li class="animate"><h3>Ипотека</h3><p>Подбор выгодных программ и помощь в оформлении.</p></li>
-        <li class="animate"><h3>Оценка</h3><p>Профессиональная оценка стоимости объектов.</p></li>
-      </ul>
-    </div>
-  </section>
+    <section id="about" class="content-section fade-in">
+        <h2>О нас</h2>
+        <p>Центр недвижимости "Мой мир" — команда профессионалов, готовых помочь на каждом этапе покупки, продажи или аренды недвижимости. Мы ценим доверие наших клиентов и гарантируем юридическую чистоту каждой сделки.</p>
+    </section>
 
-  <!-- ОБЪЕКТЫ -->
-  <section class="section alt" id="objects">
-    <div class="container">
-      <h2 class="animate">Объекты</h2>
-      <ul class="projects">
-        <li class="animate">
-          <img src="https://via.placeholder.com/400x220?text=Квартира" alt="Квартира" />
-          <h3>Квартира в центре</h3>
-          <p>95 м², дизайнерский ремонт. Цена: 15 500 000 ₽</p>
-        </li>
-        <li class="animate">
-          <img src="https://via.placeholder.com/400x220?text=Дом" alt="Дом" />
-          <h3>Коттедж за городом</h3>
-          <p>220 м², участок 10 соток. Цена: 23 000 000 ₽</p>
-        </li>
-        <li class="animate">
-          <img src="https://via.placeholder.com/400x220?text=Офис" alt="Офис" />
-          <h3>Офис в бизнес-центре</h3>
-          <p>120 м², open-space. Цена: 12 000 000 ₽</p>
-        </li>
-      </ul>
-    </div>
-  </section>
+    <section id="advantages" class="content-section fade-in">
+        <h2>Наши преимущества</h2>
+        <div class="advantages-grid">
+            <div class="advantage-card">
+                <i class="fas fa-hand-holding-heart"></i>
+                <h3>Прозрачность рынка</h3>
+                <p>Мы глубоко изучаем потребности клиента, чтобы предложить наилучшее решение.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Защита интересов</h3>
+                <p>Полное сопровождение сделки и проверка документов на всех этапах.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-money-bill-wave"></i>
+                <h3>Гарантии обязательств</h3>
+                <p>Выполнение обязательств в договоре и оплата только по факту выполнения.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-search-dollar"></i>
+                <h3>Экономия времени и денег</h3>
+                <p>Делаем работу за вас, экономя ресурсы клиента.</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- КОМАНДА -->
-  <section class="section" id="team">
-    <div class="container">
-      <h2 class="animate">Наша команда</h2>
-      <ul class="grid-3">
-        <li class="animate"><h3>Иван Иванов</h3><p>Риэлтор с 10-летним опытом.</p></li>
-        <li class="animate"><h3>Мария Петрова</h3><p>Юрист по недвижимости.</p></li>
-        <li class="animate"><h3>Алексей Смирнов</h3><p>Специалист по ипотеке и оценке.</p></li>
-      </ul>
-    </div>
-  </section>
+    <section id="services" class="content-section fade-in">
+        <h2>Наши услуги</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-home"></i>
+                <h3>Продажа</h3>
+                <p>Продаем объекты выгодно, защищая интересы клиента на каждом этапе.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-key"></i>
+                <h3>Аренда</h3>
+                <p>Помогаем с поиском и продажей объектов, учитывая ваши предпочтения.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-gavel"></i>
+                <h3>Юридическое сопровождение</h3>
+                <p>Обеспечиваем надежность и безопасность сделок.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-chart-line"></i>
+                <h3>Аналитика рынка</h3>
+                <p>Предоставляем подробный анализ по недвижимости.</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- ОТЗЫВЫ -->
-  <section class="section alt" id="reviews">
-    <div class="container">
-      <h2 class="animate">Отзывы клиентов</h2>
-      <ul class="grid-3">
-        <li class="animate"><p>«Отличное агентство! Быстро продали квартиру.»</p></li>
-        <li class="animate"><p>«Профессиональная команда, всё прошло гладко.»</p></li>
-        <li class="animate"><p>«Рекомендую, помогают на всех этапах сделки.»</p></li>
-      </ul>
-    </div>
-  </section>
+    <section id="invest" class="content-section fade-in">
+        <h2>Инвестиции в недвижимость</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-chart-pie"></i>
+                <h3>Анализ рынка</h3>
+                <p>Выбираем наиболее перспективные объекты для инвестиций.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-magnifying-glass-location"></i>
+                <h3>Подбор объекта</h3>
+                <p>Находим объект, который принесет максимальный доход.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-dollar-sign"></i>
+                <h3>Управление активами</h3>
+                <p>Берем управление недвижимостью для пассивного дохода.</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- БЛОГ -->
-  <section class="section" id="blog">
-    <div class="container">
-      <h2 class="animate">Блог</h2>
-      <ul class="grid-3">
-        <li class="animate"><h3>Советы по покупке жилья</h3><p>Полезные советы для покупателей недвижимости.</p></li>
-        <li class="animate"><h3>Как выбрать квартиру</h3><p>На что обращать внимание при выборе квартиры.</p></li>
-        <li class="animate"><h3>Ипотека 2025</h3><p>Обзор актуальных ипотечных программ.</p></li>
-      </ul>
-    </div>
-  </section>
+    <section id="team" class="content-section fade-in">
+        <h2>Наша команда</h2>
+        <div class="team-flex">
+            <div class="team-row">
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker1.jpg" alt="Баркун Александр"></div>
+                    <div class="member-info">
+                        <h3>Баркун Александр Вадимович</h3>
+                        <p>Директор</p>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker2.jpg" alt="Конон Артём"></div>
+                    <div class="member-info">
+                        <h3>Конон Артём Васильевич</h3>
+                        <p>Риэлтер</p>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker3.jpg" alt="Сергеева Татьяна"></div>
+                    <div class="member-info">
+                        <h3>Сергеева Татьяна Александровна</h3>
+                        <p>Риэлтер</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-row">
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker4.jpg" alt="Гулидова Ольга"></div>
+                    <div class="member-info">
+                        <h3>Гулидова Ольга Чеславовна</h3>
+                        <p>Риэлтер</p>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker5.jpg" alt="Трацевская Наталья"></div>
+                    <div class="member-info">
+                        <h3>Трацевская Наталья Сергеевна</h3>
+                        <p>Риэлтер</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- КОНТАКТЫ + КАРТА -->
-  <section class="section alt" id="contact-map">
-    <div class="container contact-map-container animate">
-      <div class="contact-info">
-        <h2>Свяжитесь с нами</h2>
-        <ul class="contacts">
-          <li><strong>Телефон:</strong> <a href="tel:+79991234567">+7 (999) 123-45-67</a></li>
-          <li><strong>Email:</strong> <a href="mailto:info@moy-mir.ru">info@moy-mir.ru</a></li>
-          <li><strong>Адрес:</strong> Москва, ул. Примерная, д. 10</li>
-        </ul>
-      </div>
-      <div class="map-container" id="map"></div>
-    </div>
-  </section>
+    <section id="faq" class="content-section fade-in">
+        <h2>Часто задаваемые вопросы</h2>
+        <div class="faq-container">
+            <div class="faq-item">
+                <button class="faq-question">Как купить недвижимость?</button>
+                <div class="faq-answer"><p>Мы помогаем с выбором и оформлением сделки безопасно.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Какие документы нужны для аренды?</button>
+                <div class="faq-answer"><p>Паспорт и договор аренды. Мы подготовим все правильно.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Можно ли инвестировать с маленьким бюджетом?</button>
+                <div class="faq-answer"><p>Да, мы подберем объекты под любой бюджет.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Вы работаете с юридическими лицами?</button>
+                <div class="faq-answer"><p>Да, предоставляем полный пакет услуг для бизнеса.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Как быстро продаются объекты?</button>
+                <div class="faq-answer"><p>Срок зависит от объекта и цены. Мы ускоряем процесс.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Вы проверяете документы?</button>
+                <div class="faq-answer"><p>Да, все документы проходят юридическую проверку.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Можно ли оформить ипотеку через вас?</button>
+                <div class="faq-answer"><p>Да, мы помогаем с ипотечными сделками и банками.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Какая комиссия агентства?</button>
+                <div class="faq-answer"><p>Комиссия обсуждается индивидуально и прозрачно.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Вы помогаете с ремонтом и дизайном?</button>
+                <div class="faq-answer"><p>Да, предоставляем рекомендации и партнеров для ремонта.</p></div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question">Можно ли оставить заявку онлайн?</button>
+                <div class="faq-answer"><p>Да, через форму обратной связи на сайте.</p></div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contacts" class="content-section fade-in">
+        <h2>Связаться с нами</h2>
+        <div class="contact-flex">
+            <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+                <h3>Оставить заявку</h3>
+                <input type="text" name="name" placeholder="Имя" required>
+                <input type="tel" name="phone" placeholder="Номер телефона" required>
+                <button type="submit" class="submit-btn">Отправить заявку</button>
+            </form>
+            <div class="contact-info">
+                <h3>Наши контакты</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Минская область, г. Минск, пр. Независимости, дом 40А, пом. 1</p>
+                <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
+                <p><i class="fas fa-envelope"></i> info@moimir.by</p>
+                <div class="map-container">
+                    <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
-<footer class="site-footer">
-  © <span id="year"></span> Агентство «Мой Мир». Все права защищены.
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-block">
+            <h4>Контакты</h4>
+            <p>ООО Центр недвижимости "Мой мир"</p>
+            <p>УНП: 193851907</p>
+            <p>Лицензия: 02240/505 от 18.04.2025</p>
+            <p>Страховое свидетельство: БР №0004891</p>
+        </div>
+        <div class="footer-block">
+            <h4>Навигация</h4>
+            <ul>
+                <li><a href="#about">О нас</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#invest">Инвестиции</a></li>
+                <li><a href="#team">Команда</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="footer-block">
+            <h4>Социальные сети</h4>
+            <div class="social-links">
+                <a href="https://www.instagram.com/your-username" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@your-username" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                <a href="https://realt.by/" target="_blank" aria-label="Realt.by"><i class="fas fa-house"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Центр недвижимости "Мой мир" © 2024. Все права защищены.</p>
+    </div>
 </footer>
 
+<div id="popup-overlay">
+    <div class="popup-content">
+        <button class="close-btn">×</button>
+        <h3>Оставьте заявку</h3>
+        <p>Наш менеджер свяжется с вами в ближайшее время</p>
+        <form id="popup-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+            <input type="text" name="name" placeholder="Имя" required>
+            <input type="tel" name="phone" placeholder="Номер телефона" required>
+            <button type="submit" class="submit-btn">Отправить</button>
+        </form>
+    </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
