--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </header>
 
 <main>
-    <section class="hero-section fade-in">
+    <!-- Hero Section -->
+    <section class="hero-section">
         <div class="hero-content">
             <h1>Центр недвижимости "Мой мир"</h1>
             <p>Продажа, аренда и юридическое сопровождение сделок с недвижимостью</p>
@@ -42,176 +43,168 @@
         </div>
     </section>
 
-    <section id="about" class="content-section fade-in">
+    <!-- About -->
+    <section id="about" class="content-section">
         <h2>О нас</h2>
-        <p>Центр недвижимости "Мой мир" — команда профессионалов, готовых помочь на каждом этапе покупки, продажи или аренды недвижимости. Мы ценим доверие наших клиентов и гарантируем юридическую чистоту каждой сделки.</p>
+        <p>Центр недвижимости "Мой мир" — это команда профессионалов, готовая помочь на каждом этапе покупки, продажи или аренды недвижимости.</p>
     </section>
 
-    <section id="advantages" class="content-section fade-in">
+    <!-- Advantages -->
+    <section id="advantages" class="content-section">
         <h2>Наши преимущества</h2>
         <div class="advantages-grid">
             <div class="advantage-card">
                 <i class="fas fa-hand-holding-heart"></i>
-                <h3>Прозрачность рынка</h3>
-                <p>Мы глубоко изучаем потребности клиента, чтобы предложить наилучшее решение.</p>
+                <h3>Делимся правдой о рынке</h3>
+                <p>Изучаем потребности клиента и предлагаем лучшее решение.</p>
             </div>
             <div class="advantage-card">
                 <i class="fas fa-shield-alt"></i>
-                <h3>Защита интересов</h3>
-                <p>Полное сопровождение сделки и проверка документов на всех этапах.</p>
+                <h3>Защищаем интересы клиентов</h3>
+                <p>Полное сопровождение сделки, проверка документов.</p>
             </div>
             <div class="advantage-card">
                 <i class="fas fa-money-bill-wave"></i>
-                <h3>Гарантии обязательств</h3>
-                <p>Выполнение обязательств в договоре и оплата только по факту выполнения.</p>
+                <h3>Гарантируем обязательства</h3>
+                <p>Оплата только по факту выполнения работ.</p>
             </div>
             <div class="advantage-card">
                 <i class="fas fa-search-dollar"></i>
-                <h3>Экономия времени и денег</h3>
-                <p>Делаем работу за вас, экономя ресурсы клиента.</p>
+                <h3>Экономим время и деньги</h3>
+                <p>Команда профессионалов берет процессы на себя.</p>
             </div>
         </div>
     </section>
 
-    <section id="services" class="content-section fade-in">
+    <!-- Services -->
+    <section id="services" class="content-section">
         <h2>Наши услуги</h2>
         <div class="services-grid">
             <div class="service-card">
                 <i class="fas fa-home"></i>
                 <h3>Продажа</h3>
-                <p>Продаем объекты выгодно, защищая интересы клиента на каждом этапе.</p>
+                <p>Выгодная продажа объектов, полное сопровождение сделки.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-key"></i>
                 <h3>Аренда</h3>
-                <p>Помогаем с поиском и продажей объектов, учитывая ваши предпочтения.</p>
+                <p>Помогаем подобрать объекты под ваши потребности.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-gavel"></i>
                 <h3>Юридическое сопровождение</h3>
-                <p>Обеспечиваем надежность и безопасность сделок.</p>
+                <p>Гарантия надежности и безопасности информации.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-chart-line"></i>
                 <h3>Аналитика рынка</h3>
-                <p>Предоставляем подробный анализ по недвижимости.</p>
+                <p>Подробный анализ рынка недвижимости.</p>
             </div>
         </div>
     </section>
 
-    <section id="invest" class="content-section fade-in">
+    <!-- Investment -->
+    <section id="invest" class="content-section">
         <h2>Инвестиции в недвижимость</h2>
         <div class="services-grid">
             <div class="service-card">
                 <i class="fas fa-chart-pie"></i>
                 <h3>Анализ рынка</h3>
-                <p>Выбираем наиболее перспективные объекты для инвестиций.</p>
+                <p>Подробный анализ для выбора перспективного объекта.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-magnifying-glass-location"></i>
                 <h3>Подбор объекта</h3>
-                <p>Находим объект, который принесет максимальный доход.</p>
+                <p>Найдем объект для максимального дохода.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-dollar-sign"></i>
                 <h3>Управление активами</h3>
-                <p>Берем управление недвижимостью для пассивного дохода.</p>
+                <p>Возьмем на себя управление вашей недвижимостью.</p>
             </div>
         </div>
     </section>
 
-    <section id="team" class="content-section fade-in">
+    <!-- Team -->
+    <section id="team" class="content-section">
         <h2>Наша команда</h2>
         <div class="team-flex">
             <div class="team-row">
                 <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker1.jpg" alt="Баркун Александр"></div>
-                    <div class="member-info">
-                        <h3>Баркун Александр Вадимович</h3>
-                        <p>Директор</p>
-                    </div>
+                    <div class="team-photo-container"><img src="images/worker1.jpg" alt="Александр"></div>
+                    <div class="member-info"><h3>Баркун Александр Вадимович</h3><p>Директор</p></div>
                 </div>
                 <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker2.jpg" alt="Конон Артём"></div>
-                    <div class="member-info">
-                        <h3>Конон Артём Васильевич</h3>
-                        <p>Риэлтер</p>
-                    </div>
+                    <div class="team-photo-container"><img src="images/worker2.jpg" alt="Артём"></div>
+                    <div class="member-info"><h3>Конон Артём Васильевич</h3><p>Риэлтер</p></div>
                 </div>
                 <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker3.jpg" alt="Сергеева Татьяна"></div>
-                    <div class="member-info">
-                        <h3>Сергеева Татьяна Александровна</h3>
-                        <p>Риэлтер</p>
-                    </div>
+                    <div class="team-photo-container"><img src="images/worker3.jpg" alt="Татьяна"></div>
+                    <div class="member-info"><h3>Сергеева Татьяна Александровна</h3><p>Риэлтер</p></div>
                 </div>
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker4.jpg" alt="Гулидова Ольга"></div>
-                    <div class="member-info">
-                        <h3>Гулидова Ольга Чеславовна</h3>
-                        <p>Риэлтер</p>
-                    </div>
+                    <div class="team-photo-container"><img src="images/worker4.jpg" alt="Ольга"></div>
+                    <div class="member-info"><h3>Гулидова Ольга Чеславовна</h3><p>Риэлтер</p></div>
                 </div>
                 <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker5.jpg" alt="Трацевская Наталья"></div>
-                    <div class="member-info">
-                        <h3>Трацевская Наталья Сергеевна</h3>
-                        <p>Риэлтер</p>
-                    </div>
+                    <div class="team-photo-container"><img src="images/worker5.jpg" alt="Наталья"></div>
+                    <div class="member-info"><h3>Трацевская Наталья Сергеевна</h3><p>Риэлтер</p></div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="faq" class="content-section fade-in">
+    <!-- FAQ -->
+    <section id="faq" class="content-section">
         <h2>Часто задаваемые вопросы</h2>
         <div class="faq-container">
             <div class="faq-item">
-                <button class="faq-question">Как купить недвижимость?</button>
-                <div class="faq-answer"><p>Мы помогаем с выбором и оформлением сделки безопасно.</p></div>
+                <div class="faq-question">Как купить квартиру через вас?</div>
+                <div class="faq-answer">Вы оставляете заявку, мы подбираем объекты и сопровождаем сделку.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Какие документы нужны для аренды?</button>
-                <div class="faq-answer"><p>Паспорт и договор аренды. Мы подготовим все правильно.</p></div>
+                <div class="faq-question">Можно ли продать недвижимость быстро?</div>
+                <div class="faq-answer">Да, мы помогаем найти покупателя и подготовить документы.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Можно ли инвестировать с маленьким бюджетом?</button>
-                <div class="faq-answer"><p>Да, мы подберем объекты под любой бюджет.</p></div>
+                <div class="faq-question">Как аренда проходит через ваше агентство?</div>
+                <div class="faq-answer">Мы подбираем варианты и заключаем безопасный договор.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Вы работаете с юридическими лицами?</button>
-                <div class="faq-answer"><p>Да, предоставляем полный пакет услуг для бизнеса.</p></div>
+                <div class="faq-question">Есть ли юридическое сопровождение?</div>
+                <div class="faq-answer">Да, мы сопровождаем сделки полностью.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Как быстро продаются объекты?</button>
-                <div class="faq-answer"><p>Срок зависит от объекта и цены. Мы ускоряем процесс.</p></div>
+                <div class="faq-question">Можно ли инвестировать через вас?</div>
+                <div class="faq-answer">Да, мы подбираем объекты для инвестиций и управляем ими.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Вы проверяете документы?</button>
-                <div class="faq-answer"><p>Да, все документы проходят юридическую проверку.</p></div>
+                <div class="faq-question">Сколько стоит сопровождение сделки?</div>
+                <div class="faq-answer">Стоимость зависит от типа объекта и услуг.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Можно ли оформить ипотеку через вас?</button>
-                <div class="faq-answer"><p>Да, мы помогаем с ипотечными сделками и банками.</p></div>
+                <div class="faq-question">Вы работаете с коммерческой недвижимостью?</div>
+                <div class="faq-answer">Да, как с арендой, так и с продажей коммерческих объектов.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Какая комиссия агентства?</button>
-                <div class="faq-answer"><p>Комиссия обсуждается индивидуально и прозрачно.</p></div>
+                <div class="faq-question">Какие регионы вы обслуживаете?</div>
+                <div class="faq-answer">Мы работаем по всей Минской области и в г. Минске.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Вы помогаете с ремонтом и дизайном?</button>
-                <div class="faq-answer"><p>Да, предоставляем рекомендации и партнеров для ремонта.</p></div>
+                <div class="faq-question">Можно ли оформить сделку дистанционно?</div>
+                <div class="faq-answer">Да, часть процессов можно выполнить онлайн.</div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Можно ли оставить заявку онлайн?</button>
-                <div class="faq-answer"><p>Да, через форму обратной связи на сайте.</p></div>
+                <div class="faq-question">Есть ли гарантии безопасности сделки?</div>
+                <div class="faq-answer">Все сделки сопровождаются юридически, гарантируем полную безопасность.</div>
             </div>
         </div>
     </section>
 
-    <section id="contacts" class="content-section fade-in">
+    <!-- Contacts -->
+    <section id="contacts" class="content-section">
         <h2>Связаться с нами</h2>
         <div class="contact-flex">
             <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
@@ -226,13 +219,14 @@
                 <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
                 <p><i class="fas fa-envelope"></i> info@moimir.by</p>
                 <div class="map-container">
-                    <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed"></iframe>
                 </div>
             </div>
         </div>
     </section>
 </main>
 
+<!-- Footer -->
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-block">
@@ -255,17 +249,15 @@
         <div class="footer-block">
             <h4>Социальные сети</h4>
             <div class="social-links">
-                <a href="https://www.instagram.com/your-username" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.tiktok.com/@your-username" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-                <a href="https://realt.by/" target="_blank" aria-label="Realt.by"><i class="fas fa-house"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-tiktok"></i></a>
+                <a href="#"><i class="fas fa-house"></i></a>
             </div>
         </div>
     </div>
-    <div class="copyright">
-        <p>Центр недвижимости "Мой мир" © 2024. Все права защищены.</p>
-    </div>
 </footer>
 
+<!-- Popup -->
 <div id="popup-overlay">
     <div class="popup-content">
         <button class="close-btn">×</button>
