--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Центр недвижимости "Мой мир"</title>
     <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <img src="images/icon.png" alt="Логотип Мой мир">
         </a>
         <button class="menu-btn" aria-label="Открыть меню">
-            <span class="menu-btn-icon"></span>
+            <span></span>
         </button>
         <nav class="nav-menu">
             <ul>
@@ -172,34 +172,6 @@
                 <div class="faq-question">Как аренда проходит через ваше агентство?</div>
                 <div class="faq-answer">Мы подбираем варианты и заключаем безопасный договор.</div>
             </div>
-            <div class="faq-item">
-                <div class="faq-question">Есть ли юридическое сопровождение?</div>
-                <div class="faq-answer">Да, мы сопровождаем сделки полностью.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Можно ли инвестировать через вас?</div>
-                <div class="faq-answer">Да, мы подбираем объекты для инвестиций и управляем ими.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Сколько стоит сопровождение сделки?</div>
-                <div class="faq-answer">Стоимость зависит от типа объекта и услуг.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Вы работаете с коммерческой недвижимостью?</div>
-                <div class="faq-answer">Да, как с арендой, так и с продажей коммерческих объектов.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Какие регионы вы обслуживаете?</div>
-                <div class="faq-answer">Мы работаем по всей Минской области и в г. Минске.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Можно ли оформить сделку дистанционно?</div>
-                <div class="faq-answer">Да, часть процессов можно выполнить онлайн.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Есть ли гарантии безопасности сделки?</div>
-                <div class="faq-answer">Все сделки сопровождаются юридически, гарантируем полную безопасность.</div>
-            </div>
         </div>
     </section>
 
@@ -207,7 +179,7 @@
     <section id="contacts" class="content-section">
         <h2>Связаться с нами</h2>
         <div class="contact-flex">
-            <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+            <form id="contact-form" class="contact-form" action="#" method="POST">
                 <h3>Оставить заявку</h3>
                 <input type="text" name="name" placeholder="Имя" required>
                 <input type="tel" name="phone" placeholder="Номер телефона" required>
@@ -226,7 +198,6 @@
     </section>
 </main>
 
-<!-- Footer -->
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-block">
@@ -257,13 +228,12 @@
     </div>
 </footer>
 
-<!-- Popup -->
 <div id="popup-overlay">
     <div class="popup-content">
         <button class="close-btn">×</button>
         <h3>Оставьте заявку</h3>
         <p>Наш менеджер свяжется с вами в ближайшее время</p>
-        <form id="popup-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+        <form id="popup-form" action="#" method="POST">
             <input type="text" name="name" placeholder="Имя" required>
             <input type="tel" name="phone" placeholder="Номер телефона" required>
             <button type="submit" class="submit-btn">Отправить</button>
