--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="hero-section">
         <div class="hero-content">
             <h1>Центр недвижимости "Мой мир"</h1>
-            <p>Продажа, аренда и юридическое сопровождение сделок с недвижимостью</p>
+            <p>Помогаем решать жилищные и инвестиционные вопросы с желаемым результатом.</p>
             <button class="contact-btn-hero">Связаться</button>
         </div>
     </section>
@@ -46,7 +46,7 @@
     <!-- About -->
     <section id="about" class="content-section">
         <h2>О нас</h2>
-        <p>Центр недвижимости "Мой мир" — это команда профессионалов, готовая помочь на каждом этапе покупки, продажи или аренды недвижимости.</p>
+        <p>Центр недвижимости «Мой мир» — помогаем решать жилищные и инвестиционные вопросы с желаемым результатом. Результативно работаем с любым типом недвижимости. Нам одинаково интересны объекты вторичного рынка и новостройки.</p>
     </section>
 
     <!-- Advantages -->
@@ -183,7 +183,7 @@
                 <h3>Оставить заявку</h3>
                 <input type="text" name="name" placeholder="Имя" required>
                 <input type="tel" name="phone" placeholder="Номер телефона" required>
-                <button type="submit" class="submit-btn">Отправить заявку</button>
+                <button type="submit" class="submit-btn">Связаться</button>
             </form>
             <div class="contact-info">
                 <h3>Наши контакты</h3>
