--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Центр недвижимости "Мой мир"</title>
     <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <img src="images/icon.png" alt="Логотип Мой мир">
         </a>
         <button class="menu-btn" aria-label="Открыть меню">
-            <span></span>
+            <span></span><span></span><span></span>
         </button>
         <nav class="nav-menu">
             <ul>
@@ -34,123 +34,134 @@
 </header>
 
 <main>
+
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-content">
+        <div class="hero-content container">
             <h1>Центр недвижимости "Мой мир"</h1>
-            <p>Помогаем решать жилищные и инвестиционные вопросы с желаемым результатом.</p>
+            <p>Помогаем решать жилищные и инвестиционные вопросы с желаемым результатом. Результативно работаем с любым типом недвижимости, включая новостройки и вторичный рынок.</p>
             <button class="contact-btn-hero">Связаться</button>
         </div>
     </section>
 
     <!-- About -->
     <section id="about" class="content-section">
-        <h2>О нас</h2>
-        <p>Центр недвижимости «Мой мир» — помогаем решать жилищные и инвестиционные вопросы с желаемым результатом. Результативно работаем с любым типом недвижимости. Нам одинаково интересны объекты вторичного рынка и новостройки.</p>
+        <div class="container">
+            <h2>О нас</h2>
+            <p>Центр недвижимости "Мой мир" — это команда профессионалов, готовая помочь на каждом этапе покупки, продажи или аренды недвижимости.</p>
+        </div>
     </section>
 
     <!-- Advantages -->
     <section id="advantages" class="content-section">
-        <h2>Наши преимущества</h2>
-        <div class="advantages-grid">
-            <div class="advantage-card">
-                <i class="fas fa-hand-holding-heart"></i>
-                <h3>Делимся правдой о рынке</h3>
-                <p>Изучаем потребности клиента и предлагаем лучшее решение.</p>
-            </div>
-            <div class="advantage-card">
-                <i class="fas fa-shield-alt"></i>
-                <h3>Защищаем интересы клиентов</h3>
-                <p>Полное сопровождение сделки, проверка документов.</p>
-            </div>
-            <div class="advantage-card">
-                <i class="fas fa-money-bill-wave"></i>
-                <h3>Гарантируем обязательства</h3>
-                <p>Оплата только по факту выполнения работ.</p>
-            </div>
-            <div class="advantage-card">
-                <i class="fas fa-search-dollar"></i>
-                <h3>Экономим время и деньги</h3>
-                <p>Команда профессионалов берет процессы на себя.</p>
+        <div class="container">
+            <h2>Наши преимущества</h2>
+            <div class="advantages-grid">
+                <div class="advantage-card">
+                    <i class="fas fa-hand-holding-heart"></i>
+                    <h3>Делимся правдой о рынке</h3>
+                    <p>Изучаем потребности клиента и предлагаем лучшее решение.</p>
+                </div>
+                <div class="advantage-card">
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Защищаем интересы клиентов</h3>
+                    <p>Полное сопровождение сделки, проверка документов.</p>
+                </div>
+                <div class="advantage-card">
+                    <i class="fas fa-money-bill-wave"></i>
+                    <h3>Гарантируем обязательства</h3>
+                    <p>Оплата только по факту выполнения работ.</p>
+                </div>
+                <div class="advantage-card">
+                    <i class="fas fa-search-dollar"></i>
+                    <h3>Экономим время и деньги</h3>
+                    <p>Команда профессионалов берет процессы на себя.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="content-section">
-        <h2>Наши услуги</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <i class="fas fa-home"></i>
-                <h3>Продажа</h3>
-                <p>Выгодная продажа объектов, полное сопровождение сделки.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-key"></i>
-                <h3>Аренда</h3>
-                <p>Помогаем подобрать объекты под ваши потребности.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-gavel"></i>
-                <h3>Юридическое сопровождение</h3>
-                <p>Гарантия надежности и безопасности информации.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-chart-line"></i>
-                <h3>Аналитика рынка</h3>
-                <p>Подробный анализ рынка недвижимости.</p>
+        <div class="container">
+            <h2>Наши услуги</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <i class="fas fa-home"></i>
+                    <h3>Продажа</h3>
+                    <p>Выгодная продажа объектов, полное сопровождение сделки.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-key"></i>
+                    <h3>Аренда</h3>
+                    <p>Помогаем подобрать объекты под ваши потребности.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-gavel"></i>
+                    <h3>Юридическое сопровождение</h3>
+                    <p>Гарантия надежности и безопасности информации.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Аналитика рынка</h3>
+                    <p>Подробный анализ рынка недвижимости.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Investment -->
     <section id="invest" class="content-section">
-        <h2>Инвестиции в недвижимость</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <i class="fas fa-chart-pie"></i>
-                <h3>Анализ рынка</h3>
-                <p>Подробный анализ для выбора перспективного объекта.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-magnifying-glass-location"></i>
-                <h3>Подбор объекта</h3>
-                <p>Найдем объект для максимального дохода.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-dollar-sign"></i>
-                <h3>Управление активами</h3>
-                <p>Возьмем на себя управление вашей недвижимостью.</p>
+        <div class="container">
+            <h2>Инвестиции в недвижимость</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <i class="fas fa-chart-pie"></i>
+                    <h3>Анализ рынка</h3>
+                    <p>Подробный анализ для выбора перспективного объекта.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-magnifying-glass-location"></i>
+                    <h3>Подбор объекта</h3>
+                    <p>Найдем объект для максимального дохода.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-dollar-sign"></i>
+                    <h3>Управление активами</h3>
+                    <p>Возьмем на себя управление вашей недвижимостью.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Team -->
     <section id="team" class="content-section">
-        <h2>Наша команда</h2>
-        <div class="team-flex">
-            <div class="team-row">
-                <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker1.jpg" alt="Александр"></div>
-                    <div class="member-info"><h3>Баркун Александр Вадимович</h3><p>Директор</p></div>
+        <div class="container">
+            <h2>Наша команда</h2>
+            <div class="team-flex">
+                <div class="team-row">
+                    <div class="team-member">
+                        <div class="team-photo-container"><img src="images/worker1.jpg" alt="Александр"></div>
+                        <div class="member-info"><h3>Баркун Александр Вадимович</h3><p>Директор</p></div>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-photo-container"><img src="images/worker2.jpg" alt="Артём"></div>
+                        <div class="member-info"><h3>Конон Артём Васильевич</h3><p>Риэлтер</p></div>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-photo-container"><img src="images/worker3.jpg" alt="Татьяна"></div>
+                        <div class="member-info"><h3>Сергеева Татьяна Александровна</h3><p>Риэлтер</p></div>
+                    </div>
                 </div>
-                <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker2.jpg" alt="Артём"></div>
-                    <div class="member-info"><h3>Конон Артём Васильевич</h3><p>Риэлтер</p></div>
-                </div>
-                <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker3.jpg" alt="Татьяна"></div>
-                    <div class="member-info"><h3>Сергеева Татьяна Александровна</h3><p>Риэлтер</p></div>
-                </div>
-            </div>
-            <div class="team-row">
-                <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker4.jpg" alt="Ольга"></div>
-                    <div class="member-info"><h3>Гулидова Ольга Чеславовна</h3><p>Риэлтер</p></div>
-                </div>
-                <div class="team-member">
-                    <div class="team-photo-container"><img src="images/worker5.jpg" alt="Наталья"></div>
-                    <div class="member-info"><h3>Трацевская Наталья Сергеевна</h3><p>Риэлтер</p></div>
+                <div class="team-row">
+                    <div class="team-member">
+                        <div class="team-photo-container"><img src="images/worker4.jpg" alt="Ольга"></div>
+                        <div class="member-info"><h3>Гулидова Ольга Чеславовна</h3><p>Риэлтер</p></div>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-photo-container"><img src="images/worker5.jpg" alt="Наталья"></div>
+                        <div class="member-info"><h3>Трацевская Наталья Сергеевна</h3><p>Риэлтер</p></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -158,48 +169,51 @@
 
     <!-- FAQ -->
     <section id="faq" class="content-section">
-        <h2>Часто задаваемые вопросы</h2>
-        <div class="faq-container">
-            <div class="faq-item">
-                <div class="faq-question">Как купить квартиру через вас?</div>
-                <div class="faq-answer">Вы оставляете заявку, мы подбираем объекты и сопровождаем сделку.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Можно ли продать недвижимость быстро?</div>
-                <div class="faq-answer">Да, мы помогаем найти покупателя и подготовить документы.</div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">Как аренда проходит через ваше агентство?</div>
-                <div class="faq-answer">Мы подбираем варианты и заключаем безопасный договор.</div>
+        <div class="container">
+            <h2>Часто задаваемые вопросы</h2>
+            <div class="faq-container">
+                <div class="faq-item">
+                    <div class="faq-question">Как купить квартиру через вас?</div>
+                    <div class="faq-answer">Вы оставляете заявку, мы подбираем объекты и сопровождаем сделку.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">Можно ли продать недвижимость быстро?</div>
+                    <div class="faq-answer">Да, мы помогаем найти покупателя и подготовить документы.</div>
+                </div>
+                <!-- остальные вопросы -->
             </div>
         </div>
     </section>
 
     <!-- Contacts -->
     <section id="contacts" class="content-section">
-        <h2>Связаться с нами</h2>
-        <div class="contact-flex">
-            <form id="contact-form" class="contact-form" action="#" method="POST">
-                <h3>Оставить заявку</h3>
-                <input type="text" name="name" placeholder="Имя" required>
-                <input type="tel" name="phone" placeholder="Номер телефона" required>
-                <button type="submit" class="submit-btn">Связаться</button>
-            </form>
-            <div class="contact-info">
-                <h3>Наши контакты</h3>
-                <p><i class="fas fa-map-marker-alt"></i> Минская область, г. Минск, пр. Независимости, дом 40А, пом. 1</p>
-                <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
-                <p><i class="fas fa-envelope"></i> info@moimir.by</p>
-                <div class="map-container">
-                    <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed"></iframe>
+        <div class="container">
+            <h2>Связаться с нами</h2>
+            <div class="contact-flex">
+                <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+                    <h3>Оставить заявку</h3>
+                    <input type="text" name="name" placeholder="Имя" required>
+                    <input type="tel" name="phone" placeholder="Номер телефона" required>
+                    <button type="submit" class="submit-btn">Отправить заявку</button>
+                </form>
+                <div class="contact-info">
+                    <h3>Наши контакты</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> Минская область, г. Минск, пр. Независимости, дом 40А, пом. 1</p>
+                    <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
+                    <p><i class="fas fa-envelope"></i> info@moimir.by</p>
+                    <div class="map-container">
+                        <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 </main>
 
+<!-- Footer -->
 <footer class="footer">
-    <div class="footer-content">
+    <div class="footer-content container">
         <div class="footer-block">
             <h4>Контакты</h4>
             <p>ООО Центр недвижимости "Мой мир"</p>
@@ -228,12 +242,13 @@
     </div>
 </footer>
 
+<!-- Popup -->
 <div id="popup-overlay">
     <div class="popup-content">
         <button class="close-btn">×</button>
         <h3>Оставьте заявку</h3>
         <p>Наш менеджер свяжется с вами в ближайшее время</p>
-        <form id="popup-form" action="#" method="POST">
+        <form id="popup-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
             <input type="text" name="name" placeholder="Имя" required>
             <input type="tel" name="phone" placeholder="Номер телефона" required>
             <button type="submit" class="submit-btn">Отправить</button>
