--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <img src="images/icon.png" alt="Логотип Мой мир">
         </a>
         <button class="menu-btn" aria-label="Открыть меню">
-            <span></span><span></span><span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </button>
         <nav class="nav-menu">
             <ul>
@@ -34,134 +36,123 @@
 </header>
 
 <main>
-
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-content container">
+        <div class="hero-content">
             <h1>Центр недвижимости "Мой мир"</h1>
-            <p>Помогаем решать жилищные и инвестиционные вопросы с желаемым результатом. Результативно работаем с любым типом недвижимости, включая новостройки и вторичный рынок.</p>
+            <p>Продажа, аренда и юридическое сопровождение сделок с недвижимостью</p>
             <button class="contact-btn-hero">Связаться</button>
         </div>
     </section>
 
     <!-- About -->
-    <section id="about" class="content-section">
-        <div class="container">
-            <h2>О нас</h2>
-            <p>Центр недвижимости "Мой мир" — это команда профессионалов, готовая помочь на каждом этапе покупки, продажи или аренды недвижимости.</p>
-        </div>
+    <section id="about" class="content-section about-section">
+        <h2>О нас</h2>
+        <p>Центр недвижимости «Мой мир» — помогаем решать жилищные и инвестиционные вопросы с желаемым результатом. Результативно работаем с любым типом недвижимости. Нам одинаково интересны объекты вторичного рынка и новостройки.</p>
     </section>
 
     <!-- Advantages -->
     <section id="advantages" class="content-section">
-        <div class="container">
-            <h2>Наши преимущества</h2>
-            <div class="advantages-grid">
-                <div class="advantage-card">
-                    <i class="fas fa-hand-holding-heart"></i>
-                    <h3>Делимся правдой о рынке</h3>
-                    <p>Изучаем потребности клиента и предлагаем лучшее решение.</p>
-                </div>
-                <div class="advantage-card">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>Защищаем интересы клиентов</h3>
-                    <p>Полное сопровождение сделки, проверка документов.</p>
-                </div>
-                <div class="advantage-card">
-                    <i class="fas fa-money-bill-wave"></i>
-                    <h3>Гарантируем обязательства</h3>
-                    <p>Оплата только по факту выполнения работ.</p>
-                </div>
-                <div class="advantage-card">
-                    <i class="fas fa-search-dollar"></i>
-                    <h3>Экономим время и деньги</h3>
-                    <p>Команда профессионалов берет процессы на себя.</p>
-                </div>
+        <h2>Наши преимущества</h2>
+        <div class="advantages-grid">
+            <div class="advantage-card">
+                <i class="fas fa-hand-holding-heart"></i>
+                <h3>Делимся правдой о рынке</h3>
+                <p>Изучаем потребности клиента и предлагаем лучшее решение.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Защищаем интересы клиентов</h3>
+                <p>Полное сопровождение сделки, проверка документов.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-money-bill-wave"></i>
+                <h3>Гарантируем обязательства</h3>
+                <p>Оплата только по факту выполнения работ.</p>
+            </div>
+            <div class="advantage-card">
+                <i class="fas fa-search-dollar"></i>
+                <h3>Экономим время и деньги</h3>
+                <p>Команда профессионалов берет процессы на себя.</p>
             </div>
         </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="content-section">
-        <div class="container">
-            <h2>Наши услуги</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <i class="fas fa-home"></i>
-                    <h3>Продажа</h3>
-                    <p>Выгодная продажа объектов, полное сопровождение сделки.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-key"></i>
-                    <h3>Аренда</h3>
-                    <p>Помогаем подобрать объекты под ваши потребности.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-gavel"></i>
-                    <h3>Юридическое сопровождение</h3>
-                    <p>Гарантия надежности и безопасности информации.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Аналитика рынка</h3>
-                    <p>Подробный анализ рынка недвижимости.</p>
-                </div>
+        <h2>Наши услуги</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-home"></i>
+                <h3>Продажа</h3>
+                <p>Выгодная продажа объектов, полное сопровождение сделки.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-key"></i>
+                <h3>Аренда</h3>
+                <p>Помогаем подобрать объекты под ваши потребности.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-gavel"></i>
+                <h3>Юридическое сопровождение</h3>
+                <p>Гарантия надежности и безопасности информации.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-chart-line"></i>
+                <h3>Аналитика рынка</h3>
+                <p>Подробный анализ рынка недвижимости.</p>
             </div>
         </div>
     </section>
 
     <!-- Investment -->
     <section id="invest" class="content-section">
-        <div class="container">
-            <h2>Инвестиции в недвижимость</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <i class="fas fa-chart-pie"></i>
-                    <h3>Анализ рынка</h3>
-                    <p>Подробный анализ для выбора перспективного объекта.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-magnifying-glass-location"></i>
-                    <h3>Подбор объекта</h3>
-                    <p>Найдем объект для максимального дохода.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-dollar-sign"></i>
-                    <h3>Управление активами</h3>
-                    <p>Возьмем на себя управление вашей недвижимостью.</p>
-                </div>
+        <h2>Инвестиции в недвижимость</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-chart-pie"></i>
+                <h3>Анализ рынка</h3>
+                <p>Подробный анализ для выбора перспективного объекта.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-magnifying-glass-location"></i>
+                <h3>Подбор объекта</h3>
+                <p>Найдем объект для максимального дохода.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-dollar-sign"></i>
+                <h3>Управление активами</h3>
+                <p>Возьмем на себя управление вашей недвижимостью.</p>
             </div>
         </div>
     </section>
 
     <!-- Team -->
     <section id="team" class="content-section">
-        <div class="container">
-            <h2>Наша команда</h2>
-            <div class="team-flex">
-                <div class="team-row">
-                    <div class="team-member">
-                        <div class="team-photo-container"><img src="images/worker1.jpg" alt="Александр"></div>
-                        <div class="member-info"><h3>Баркун Александр Вадимович</h3><p>Директор</p></div>
-                    </div>
-                    <div class="team-member">
-                        <div class="team-photo-container"><img src="images/worker2.jpg" alt="Артём"></div>
-                        <div class="member-info"><h3>Конон Артём Васильевич</h3><p>Риэлтер</p></div>
-                    </div>
-                    <div class="team-member">
-                        <div class="team-photo-container"><img src="images/worker3.jpg" alt="Татьяна"></div>
-                        <div class="member-info"><h3>Сергеева Татьяна Александровна</h3><p>Риэлтер</p></div>
-                    </div>
+        <h2>Наша команда</h2>
+        <div class="team-flex">
+            <div class="team-row">
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker1.jpg" alt="Александр"></div>
+                    <div class="member-info"><h3>Баркун Александр Вадимович</h3><p>Директор</p></div>
                 </div>
-                <div class="team-row">
-                    <div class="team-member">
-                        <div class="team-photo-container"><img src="images/worker4.jpg" alt="Ольга"></div>
-                        <div class="member-info"><h3>Гулидова Ольга Чеславовна</h3><p>Риэлтер</p></div>
-                    </div>
-                    <div class="team-member">
-                        <div class="team-photo-container"><img src="images/worker5.jpg" alt="Наталья"></div>
-                        <div class="member-info"><h3>Трацевская Наталья Сергеевна</h3><p>Риэлтер</p></div>
-                    </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker2.jpg" alt="Артём"></div>
+                    <div class="member-info"><h3>Конон Артём Васильевич</h3><p>Риелтор</p></div>
+                </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker3.jpg" alt="Татьяна"></div>
+                    <div class="member-info"><h3>Сергеева Татьяна Александровна</h3><p>Риелтор</p></div>
+                </div>
+            </div>
+            <div class="team-row">
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker4.jpg" alt="Ольга"></div>
+                    <div class="member-info"><h3>Гулидова Ольга Чеславовна</h3><p>Риелтор</p></div>
+                </div>
+                <div class="team-member">
+                    <div class="team-photo-container"><img src="images/worker5.jpg" alt="Наталья"></div>
+                    <div class="member-info"><h3>Трацевская Наталья Сергеевна</h3><p>Риелтор</p></div>
                 </div>
             </div>
         </div>
@@ -169,51 +160,47 @@
 
     <!-- FAQ -->
     <section id="faq" class="content-section">
-        <div class="container">
-            <h2>Часто задаваемые вопросы</h2>
-            <div class="faq-container">
-                <div class="faq-item">
-                    <div class="faq-question">Как купить квартиру через вас?</div>
-                    <div class="faq-answer">Вы оставляете заявку, мы подбираем объекты и сопровождаем сделку.</div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">Можно ли продать недвижимость быстро?</div>
-                    <div class="faq-answer">Да, мы помогаем найти покупателя и подготовить документы.</div>
-                </div>
-                <!-- остальные вопросы -->
-            </div>
+        <h2>Часто задаваемые вопросы</h2>
+        <div class="faq-container">
+            <div class="faq-item"><div class="faq-question">Как купить квартиру через вас?</div><div class="faq-answer">Вы оставляете заявку, мы подбираем объекты и сопровождаем сделку.</div></div>
+            <div class="faq-item"><div class="faq-question">Можно ли продать недвижимость быстро?</div><div class="faq-answer">Да, мы помогаем найти покупателя и подготовить документы.</div></div>
+            <div class="faq-item"><div class="faq-question">Как аренда проходит через ваше агентство?</div><div class="faq-answer">Мы подбираем варианты и заключаем безопасный договор.</div></div>
+            <div class="faq-item"><div class="faq-question">Есть ли юридическое сопровождение?</div><div class="faq-answer">Да, мы сопровождаем сделки полностью.</div></div>
+            <div class="faq-item"><div class="faq-question">Можно ли инвестировать через вас?</div><div class="faq-answer">Да, мы подбираем объекты для инвестиций и управляем ими.</div></div>
+            <div class="faq-item"><div class="faq-question">Сколько стоит сопровождение сделки?</div><div class="faq-answer">Стоимость зависит от типа объекта и услуг.</div></div>
+            <div class="faq-item"><div class="faq-question">Вы работаете с коммерческой недвижимостью?</div><div class="faq-answer">Да, как с арендой, так и с продажей коммерческих объектов.</div></div>
+            <div class="faq-item"><div class="faq-question">Какие регионы вы обслуживаете?</div><div class="faq-answer">Мы работаем по всей Минской области и в г. Минске.</div></div>
+            <div class="faq-item"><div class="faq-question">Можно ли оформить сделку дистанционно?</div><div class="faq-answer">Да, часть процессов можно выполнить онлайн.</div></div>
+            <div class="faq-item"><div class="faq-question">Есть ли гарантии безопасности сделки?</div><div class="faq-answer">Все сделки сопровождаются юридически, гарантируем полную безопасность.</div></div>
         </div>
     </section>
 
     <!-- Contacts -->
-    <section id="contacts" class="content-section">
-        <div class="container">
-            <h2>Связаться с нами</h2>
-            <div class="contact-flex">
-                <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
-                    <h3>Оставить заявку</h3>
-                    <input type="text" name="name" placeholder="Имя" required>
-                    <input type="tel" name="phone" placeholder="Номер телефона" required>
-                    <button type="submit" class="submit-btn">Отправить заявку</button>
-                </form>
-                <div class="contact-info">
-                    <h3>Наши контакты</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Минская область, г. Минск, пр. Независимости, дом 40А, пом. 1</p>
-                    <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
-                    <p><i class="fas fa-envelope"></i> info@moimir.by</p>
-                    <div class="map-container">
-                        <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed"></iframe>
-                    </div>
+    <section id="contacts" class="content-section contacts-section">
+        <h2>Связаться с нами</h2>
+        <div class="contact-flex">
+            <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+                <h3>Оставить заявку</h3>
+                <input type="text" name="name" placeholder="Имя" required>
+                <input type="tel" name="phone" placeholder="Номер телефона" required>
+                <button type="submit" class="submit-btn">Отправить заявку</button>
+            </form>
+            <div class="contact-info">
+                <h3>Наши контакты</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Минская область, г. Минск, пр. Независимости, дом 40А, пом. 1</p>
+                <p><i class="fas fa-phone-alt"></i> +375 (29) 123-45-67</p>
+                <p><i class="fas fa-envelope"></i> info@moimir.by</p>
+                <div class="map-container">
+                    <iframe src="https://maps.google.com/maps?q=Минск, пр. Независимости, 40А&z=15&t=m&output=embed"></iframe>
                 </div>
             </div>
         </div>
     </section>
-
 </main>
 
 <!-- Footer -->
 <footer class="footer">
-    <div class="footer-content container">
+    <div class="footer-content">
         <div class="footer-block">
             <h4>Контакты</h4>
             <p>ООО Центр недвижимости "Мой мир"</p>
